--- a/client-app/src/features/common/timeline/timeline.css
+++ b/client-app/src/features/common/timeline/timeline.css
@@ -7,26 +7,27 @@
   
   .line {
     flex: 1;
-    height: 5px;
-    background-color: #000;
+    height: 2px;
+    background-color: #161616;
   }
   
   .dot {
     position: absolute;
-    width: 12px;
-    height: 12px;
-    background-color: #3498db;
+    width: 10px;
+    height: 10px;
+    background-color: #161616;
     border-radius: 50%;
     cursor: pointer;
-    transition: background-color 0.3s;
+    transition: left 1.5s ease-in-out;
+    transition-property: left;
   }
   
   .dot:hover {
-    background-color: #2980b9;
+    background-color: #fcbe15;
   }
   
   .dot.selected {
-    background-color: #e74c3c;
+    background-color: #fcbe15;
   }
   
   .tooltip {
@@ -34,6 +35,7 @@
     position: absolute;
     background-color: #333;
     color: #fff;
+    margin-top: 150%;
     padding: 5px;
     border-radius: 5px;
     font-size: 14px;
